updating securities and increasing cardinalities